hphp/hack/test/typecheck/expression_trees/splice_state.php.like_types.exp
File "splice_state.php", line 25, characters 7-24:
Typing error (Typing[4110])
  File "splice_state.php", line 25, characters 7-24:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_state.php", line 12, characters 25-53:
  But got `dynamic` because it is an unenforceable type
